Implemented Float*.valueOf().